--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="nb">
 	<head>
+		<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="font/css/all.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 		<link rel="stylesheet" href="style.css">
+		<title>Søkemotoroptimalisering</title>
 	</head>
 	<body>
 		<script>
@@ -19,7 +22,7 @@
 			}
 		}
 		</script>
-	<div id="grid-container">
+	<main id="grid-container">
 		<header id="page-header">
 			<h1>Søkemotoroptimalisering</h1>
 		</header>
@@ -43,12 +46,12 @@
 	
 			</ul>
 		</nav>
-		<div id="main">
+		<main>
 			<article id="item-1">
 				<header>
 					<h1>Overskrift 1</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="text about a movie">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -58,7 +61,7 @@
 				<header>
 					<h1>Overskrift 2</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400"alt="text about a movie">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -68,7 +71,7 @@
 				<header>
 					<h1>Overskrift 3</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="text about a movie">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -78,7 +81,7 @@
 				<header>
 					<h1>Overskrift 1</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="text about a movie">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -88,14 +91,14 @@
 				<header>
 					<h1>Overskrift 2</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="text about a movie">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
 				<a>Les mer</a>
 			</article>
-		</div>
-		<div id="aside">
+		</main>
+		<aside>
 			<h1>Side innhold</h1>
 			<section id="video">
 			</section>
@@ -108,13 +111,13 @@
 					<li><a>Link</a></li>
 				</ul>
 			</section>			
-			<section id="google-btn">
+			<button id="google-btn">
 				<a class="btn">Google</a>
-			</section>
-		</div>
+			</button>
+		</aside>
 		<footer>
 			Webutvikling 2024
 		</footer>
-	</div>
+	</main>
 	</body>
 </html>
