--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="nb">
 	<head>
 		<meta charset="utf-8">
+		<meta name="description" content="Søkemotoroptimalisering">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="font/css/all.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
@@ -27,7 +28,7 @@
 			<h1>Søkemotoroptimalisering</h1>
 		</header>
 		<nav>
-			<h1>Logo</h1>
+			<h2>Logo</h2>
 			<i class="fas fa-hamburger" onclick="mobilMenu()"></i>
 			<ul id="ham" class="top-menu">
 				<li><a>Link</a></li>
@@ -49,7 +50,7 @@
 		<main>
 			<article id="item-1">
 				<header>
-					<h1>Overskrift 1</h1>
+					<h2>Overskrift 1</h2>
 				</header>
 				<img src="https://picsum.photos/400/400" alt="text about a movie">
 				<p>
@@ -59,7 +60,7 @@
 			</article>
 			<article id="item-2">
 				<header>
-					<h1>Overskrift 2</h1>
+					<h3>Overskrift 2</h3>
 				</header>
 				<img src="https://picsum.photos/400/400"alt="text about a movie">
 				<p>
@@ -69,7 +70,7 @@
 			</article>
 			<article id="item-3">
 				<header>
-					<h1>Overskrift 3</h1>
+					<h3>Overskrift 3</h3>
 				</header>
 				<img src="https://picsum.photos/400/400" alt="text about a movie">
 				<p>
@@ -79,7 +80,7 @@
 			</article>
 			<article>
 				<header>
-					<h1>Overskrift 1</h1>
+					<h3>Overskrift 1</h3>
 				</header>
 				<img src="https://picsum.photos/400/400" alt="text about a movie">
 				<p>
@@ -89,7 +90,7 @@
 			</article>
 			<article>
 				<header>
-					<h1>Overskrift 2</h1>
+					<h3>Overskrift 2</h3>
 				</header>
 				<img src="https://picsum.photos/400/400" alt="text about a movie">
 				<p>
@@ -99,7 +100,7 @@
 			</article>
 		</main>
 		<aside>
-			<h1>Side innhold</h1>
+			<h3>Side innhold</h3>
 			<section id="video">
 			</section>
 			<section id="rel-article">
