--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nb">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="Søkemotoroptimalisering">
@@ -30,9 +30,9 @@
 			<h2>Logo</h2>
 			<i class="fas fa-hamburger" onclick="mobilMenu()"></i>
 			<ul id="ham" class="top-menu">
-				<li><a>Link</a></li>
-				<li><a>Link</a></li>
-				<li><a>Link</a></li>
+				<li><a href="#" aria-label="Klikk">Link</a></li>
+				<li><a href="#" aria-label="Klikk">Link</a></li>
+				<li><a href="#" aria-label="Klikk">Link</a></li>
 				<!-- Her starter dropdown -->
 				<li class="dropdown-point"> 
 					<a>Oblig 1</a>
@@ -61,7 +61,7 @@
 				<header>
 					<h3>Overskrift 2</h3>
 				</header>
-				<img src="https://picsum.photos/600/600"alt="text about a movie">
+				<img src="https://picsum.photos/600/600" alt="text about a movie">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -97,27 +97,26 @@
 				</p>
 				<a>Les mer</a>
 			</article>
+			<aside>
+				<h3>Side innhold</h3>
+				<section id="video">
+				</section>
+				<section id="rel-article">
+					<ul>
+						<li><a href="#" aria-label="Klikk">Link</a></li>
+						<li><a href="#" aria-label="Klikk">Link</a></li>
+						<li><a href="#" aria-label="Klikk">Link</a></li>
+						<li><a href="#" aria-label="Klikk">Link</a></li>
+						<li><a href="#" aria-label="Klikk">Link</a></li>
+					</ul>
+				</section>			
+				<button id="google-btn">
+					<a href="#" class="btn" aria-label="Klikk">Google</a>
+				</button>
+			</aside>
 		</main>
-		<aside>
-			<h3>Side innhold</h3>
-			<section id="video">
-			</section>
-			<section id="rel-article">
-				<ul>
-					<li><a>Link</a></li>
-					<li><a>Link</a></li>
-					<li><a>Link</a></li>
-					<li><a>Link</a></li>
-					<li><a>Link</a></li>
-				</ul>
-			</section>			
-			<button id="google-btn">
-				<a class="btn">Google</a>
-			</button>
-		</aside>
 		<footer>
 			Webutvikling 2024
 		</footer>
-	</main>
 	</body>
 </html>
