--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			}
 		}
 		</script>
-	<main id="grid-container">
+	<div id="grid-container">
 		<header id="page-header">
 			<h1>Søkemotoroptimalisering</h1>
 		</header>
@@ -118,5 +118,6 @@
 		<footer>
 			Webutvikling 2024
 		</footer>
+	</div>
 	</body>
 </html>
