--- a/mirco/ovelse1.html
+++ b/mirco/ovelse1.html
@@ -17,29 +17,29 @@
 	</head>
 
 	<body>
-		<main>
-			<h1>The Witcher</h1>
+		<main itemscope itemtype="https://schema.org/TVSeries">
+			<h1 itemprop="name">The Witcher</h1>
 			<img src="https://occ-0-1165-38.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABXH81uXzUNSVsIbZbV8eUidh4wf4mUXniE9hZb8926m7asXYaCh9XnjYuO4VSkZeJU_Nitzm8TotvouCYI15UIrX_tBp.jpg?r=2f0" alt="Bilde fra tv-serien witcher">
-			<span>Bilde fra <a href="https://www.netflix.com/no/title/80189685">Netflix</a></span>
+			<span itemprop="image">Bilde fra <a href="https://www.netflix.com/no/title/80189685">Netflix</a></span>
 
-			<span>Creator: Lauren Schmidt</span>
-			<p>Geralt of Rivia, a solitary monster hunter, struggles to find his place in a world where people often prove more wicked than beasts.</p>
+			<span itemprop="creator" itemscope itemtype="https://schema.org/Persons" itemprop="name">Creator: Lauren Schmidt</span>
+			<p itemprop="description">Geralt of Rivia, a solitary monster hunter, struggles to find his place in a world where people often prove more wicked than beasts.</p>
 
 			<section>
 				<h5>Genre</h5>
 				<ul>
-					<li>Action</li>
-					<li>Adventure</li>
-					<li>Fantasy</li>
+					<li itemprop="genre">Action</li>
+					<li itemprop="genre">Adventure</li>
+					<li itemprop="genre">Fantasy</li>
 				</ul>
 			</section>
 
 			<section>
 				<h5>Stars</h5>
 				<ul>
-					<li>Henry Cavill</li>
-					<li>Anna Shaffer</li>
-					<li>Freya Allen</li>
+					<li itemprop="actor" itemtype="https://schema.org/Persons" itemprop="name">Henry Cavill</li>
+					<li itemprop="actor" itemtype="https://schema.org/Persons" itemprop="name">Anna Shaffer</li>
+					<li itemprop="actor" itemtype="https://schema.org/Persons" itemprop="name">Freya Allen</li>
 				</ul>
 			</section>
 		</main>
